Add class Detail with name, manufactured and prices, add class Stock containing list of details, functions of add show, add menu and check function, work, in development

--- a/StockApp/StockApp.vcxproj
+++ b/StockApp/StockApp.vcxproj
@@ -127,7 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Detail.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Stock.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Detail.h" />
+    <ClInclude Include="Stock.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
